# StockNewsPrediction

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  api_main.py  bayesian_main.py  config.py  factory.py  main.py  ticker_normalize.py
app/models/: __init__.py  schemas.py
app/services/: __init__.py  bayesian_dataset_service.py  bayesian_model_service.py  embedding_service.py  market_data_service.py  news_service.py  pipeline_service.py  prediction_service.py  retrieval_service.py  scoring_service.py  sentiment_service.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ArticleEvidence.tsx  ScoreBar.tsx  TickerCard.tsx
stock_event_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_main.py  test_bayesian_dataset_service.py  test_bayesian_model_service.py  test_news_service.py  test_pipeline_service.py  test_retrieval_service.py  test_scoring_service.py  test_sentiment_service.py
