[project]
name = "stock-event-predictor"
version = "0.1.0"
description = "Prototype for event-driven stock impact prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "sentence-transformers>=3.0",
  "typer>=0.12",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.services", "app.models"]

[tool.pytest.ini_options]
testpaths = ["tests"]
